# MCP-A2A-Udemy

./: .env.example  .gitignore  README.md  ToolCalling.ipynb  main.py  pyproject.toml
01_FirstMCPServer/: client.py  script.sh  server.py
03_RessourcesPromptsTools/: client.py  server.py
04_Context/: client.py  server.py
05_Discovery/: client.py  server.py
06_Roots/: client.py  docs.md  server.py
07_Sampling/: client.py  server.py
08_LangGraph_MCP/: client.py  server.py
09_Authentication/: auth0_provider.py  client.py  server.py
09_Authorization/: auth0_provider.py  client.py  server.py
09_Fastapi_Integration/: app.py  client.py  fromapp_client.py  mcp_app.py  server.py
10_Composition/: auth0_provider.py  client.py  server.py
10_Fastapi_Integration/: app.py  client.py  fromapp_client.py  mcp_app.py  server.py
11_Composition/: auth0_provider.py  client.py  server.py
11_Proxy_Servers/: backend_server.py  proxy_servers.py
12_Proxy_Servers/: backend_server.py  backend_server_1.py  client.py  proxy_servers.py
13_Capstone/: Dockerfile.api  Dockerfile.furniture  Dockerfile.nginx  api_server.py  auth0_provider.py  docker-compose.yaml  furniture_server.py  llm_furniture_agent.py  nginx.conf
14_vista_mcp/: client.py  server.py
docs/: MCP_Interview_Cheat_Sheet.md  MCP_Interview_Flashcards.md  MCP_Interview_Mock_Interview.md  MCP_Interview_Prep_Cheat_Sheet.md  MCP_Interview_Prep_Flashcards.md  MCP_Interview_Prep_Google_A2A.md  MCP_Interview_Prep_Handbook.md  MCP_Interview_Prep_Master.md  MCP_Interview_Prep_VectorDBs.md  README.md
(+10 files in other folders)
